syntax = "proto3";

package auth;

message LdapSearchFilter {

    repeated string DNs = 1;
    string Filter = 2;
    string IDAttribute = 3;
    string DisplayAttribute = 4;
    string Scope = 5;

}

message LdapMapping {

    string LeftAttribute = 1;
    string RightAttribute = 2;
    string RuleString = 3;
    string RolePrefix = 4;

}

message LdapMemberOfMapping {

    LdapMapping Mapping = 1;

    LdapSearchFilter GroupFilter = 2;

    bool SupportNestedGroup = 3;

    bool RealMemberOf = 4;

    string RealMemberOfAttribute = 5;
    string RealMemberOfValueFormat = 6;

    string PydioMemberOfAttribute = 7;
    string PydioMemberOfValueFormat = 8;

}

message LdapServerConfig {

    string ConfigId = 1;
    string DomainName = 2;
    string Host = 3;
    string Connection = 4;
    string BindDN = 5;
    string BindPW = 6;

    bool SkipVerifyCertificate = 7;
    string RootCA = 8;
    //To be converted to []byte
    string RootCAData = 9;
    int32 PageSize = 10;

    LdapSearchFilter User = 11;


    repeated LdapMapping MappingRules = 12;
    LdapMemberOfMapping MemberOfMapping = 13;

    string RolePrefix = 14;

    string Schedule = 15;
    string SchedulerDetails = 16;

}